Closed Bug 764376 Opened 13 years ago Closed 13 years ago

Fix references to |class nsArenaMemoryStats|

Categories

(Core :: Layout, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: rain1, Assigned: rain1)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

nsMemoryArenaStats should be a struct but is referred to as a class in a couple of places. This causes a huge number of warnings with MSVC10.
Summary: Fix references to |class nsMemoryArenaStats| → Fix references to |class nsArenaMemoryStats|
Attached patch fixSplinter Review
Assignee: nobody → sagarwal
Status: NEW → ASSIGNED
Attachment #632689 - Flags: review?(n.nethercote)
Comment on attachment 632689 [details] [diff] [review] fix Stealing (and landing) this, as this makes my eyes bleed!
Attachment #632689 - Flags: review?(n.nethercote) → review+
Whiteboard: [build_warning]
Target Milestone: --- → mozilla16
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Thanks, Siddharth!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: