Bug 764376 - Fix references to |class nsArenaMemoryStats|; r=ehsan